Modified codes for adversarial example search with heterogeneous model structure

--- a/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
+++ b/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
@@ -266,7 +266,7 @@
     {
       "cell_type": "code",
       "source": [
-        "url = \"https://drive.google.com/uc?export=download&id=1tDR1RevR0JonwdidD1oSzTDulXhykb8G\"\n",
+        "url = \"https://drive.google.com/uc?export=download&id=12I5v-qZ3fICEkuJjeSdgH6WWxud6ncF0\"\n",
         "output = model_folder+'/checkpoint.zip'\n",
         "gdown.download(url, output, quiet=False)\n",
         "shutil.unpack_archive(output, model_folder)\n",
@@ -319,7 +319,7 @@
         "gdown.download(url, output, quiet=False)    \n",
         "\n",
         "# Download file for TF1 model\n",
-        "url = \"https://drive.google.com/uc?export=download&id=1qcb2LtXCyhWfP2A9IPr_P7o4WGLfb7QZ\"\n",
+        "url = \"https://drive.google.com/uc?export=download&id=11Uj_M8msUIVLUND_ou3xm0-vEHdk0V4f\"\n",
         "output = base_folder+'/model_submit.py'\n",
         "gdown.download(url, output, quiet=False)"
       ],
@@ -382,7 +382,7 @@
     {
       "cell_type": "code",
       "source": [
-        "url = \"https://drive.google.com/uc?export=download&id=1lY3MDPYoEa29W1eCEDdUpKn60wpKdinI\"\n",
+        "url = \"https://drive.google.com/uc?export=download&id=1S7ivr2avGlK28Aw9fAbavDwaOejX2yt9\"\n",
         "output = \"./auto-attack\"+'/auto-attack-TF1.zip'\n",
         "gdown.download(url, output, quiet=False)\n",
         "shutil.unpack_archive(output, \"./auto-attack\")\n",
@@ -444,7 +444,9 @@
         "* Line 99: tf.contrib.framework.sort(x, axis=1) ==> x_sort = tf.sort(x, axis=1)\n",
         "\n",
         "Modifications on \"autoattack.py\" are,\n",
-        "* Line 91 and 92 are comment out since \"check_dynamic\" function in checks.py has not implemented to support TF1 codes. This is handled with 'the check for dynamic defenses is not currently supported' message, but model(x) function call in line 101 on checks.py is not handled for TF1 and gives error."
+        "* Line 91 and 92 are comment out since \"check_dynamic\" function in checks.py has not implemented to support TF1 codes. This is handled with 'the check for dynamic defenses is not currently supported' message, but model(x) function call in line 101 on checks.py is not handled for TF1 and gives error.\n",
+        "\n",
+        "The proposed model contains \"quantization\" blocks for realizing gradient masking. To evaluate the robustness of the proposed model fairly, we should take into account the existence of \"quantization\" blocks and help backpropagation to find gradients. The [AutoAttack flag_docs](https://github.com/fra31/auto-attack/blob/master/flags_doc.md) suggest to use [BPDA](http://proceedings.mlr.press/v80/athalye18a.html) method, which approximates such functions with differentiable counterparts. Since BPDA is not implemented in AutoAttack, we modify the attack codes to handle different models in feedforward and backpropagation phases. With these modifications, we can use original proposed model (with quantization blocks) in evalution and model without quantization blocks in computing gradients during adversarial example generation."
       ],
       "metadata": {
         "id": "sZC_FeBCCBOO"
@@ -453,8 +455,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!cp \"/content/auto-attack/auto-attack-TF1/autoattack/utils_tf.py\" \"/usr/local/lib/python3.7/dist-packages/autoattack/utils_tf.py\"\n",
-        "!cp \"/content/auto-attack/auto-attack-TF1/autoattack/autoattack.py\" \"/usr/local/lib/python3.7/dist-packages/autoattack/autoattack.py\""
+        "!cp -r /kaggle/working/auto-attack/auto-attack-TF1_Heterogeneous/autoattack/. /opt/conda/lib/python3.7/site-packages/autoattack/"
       ],
       "metadata": {
         "execution": {
@@ -501,39 +502,16 @@
     {
       "cell_type": "code",
       "source": [
-        "filter_size_list = 3\n",
-        "activation = \"swish\"\n",
-        "residual_sizes = 5\n",
-        "skip_connection_active = True\n",
-        "batch_normalization_active = True\n",
-        "class_num = 10"
-      ],
-      "metadata": {
-        "execution": {
-          "iopub.status.busy": "2022-07-27T12:05:14.869365Z",
-          "iopub.execute_input": "2022-07-27T12:05:14.871917Z",
-          "iopub.status.idle": "2022-07-27T12:05:14.879832Z",
-          "shell.execute_reply.started": "2022-07-27T12:05:14.871862Z",
-          "shell.execute_reply": "2022-07-27T12:05:14.878318Z"
-        },
-        "trusted": true,
-        "id": "5SwXOjtbCBOP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Define adversarial attack\n",
-        "num_examples = 10000\n",
+        "num_examples = 1000\n",
         "batch_size = 100\n",
         "epsilon = 8/255.0\n",
         "\n",
         "# Get model\n",
         "x_input_place_holder = tf.compat.v1.placeholder(tf.float32,shape=[None, 32, 32, 3],name='x_input')\n",
         "y_input_place_holder = tf.compat.v1.placeholder(tf.int64, shape=None)\n",
-        "model_quantize = Model(mode='eval',x_input=x_input_place_holder,y_input=y_input_place_holder,batch_size=batch_size,filter_size=filter_size_list,class_num=class_num,activation=activation,batch_normalization_active=batch_normalization_active,skip_connection_active=skip_connection_active,residual_sizes=residual_sizes,quantize_active=True)\n",
+        "model_quantize = Model(mode='eval',x_input=x_input_place_holder,y_input=y_input_place_holder,quantize_active=True)\n",
+        "model_no_quantize = Model(mode='eval',x_input=x_input_place_holder,y_input=y_input_place_holder,quantize_active=False)\n",
         "saver = tf.compat.v1.train.Saver()\n",
         "\n",
         "# Dataset read functions\n",
@@ -555,15 +533,11 @@
         "saver.restore(sess, model_checkpoint)\n",
         "\n",
         "model_adapted = utils_tf.ModelAdapter(model_quantize.pre_softmax, model_quantize.x_input, model_quantize.y_input, sess)\n",
+        "model_back_adapted = utils_tf.ModelAdapter(model_no_quantize.pre_softmax, model_no_quantize.x_input, model_no_quantize.y_input, sess)\n",
         "\n",
         "# run plus attack\n",
         "print(\"******** RUN PLUS ATTACK *******\")\n",
-        "adversary = AutoAttack(model_adapted, norm='Linf', eps=epsilon, version='plus', is_tf_model=True,verbose=True)\n",
-        "x_adv = adversary.run_standard_evaluation(torch_testX, torch_testY, bs=batch_size)\n",
-        "\n",
-        "# run attack - rand\n",
-        "print(\"******** RUN RAND ATTACK *******\")\n",
-        "adversary = AutoAttack(model_adapted, norm='Linf', eps=epsilon, version='rand', is_tf_model=True,verbose=True)\n",
+        "adversary = AutoAttack(model_back_adapted,model_adapted, norm='Linf', eps=epsilon, version='plus', is_tf_model=True,verbose=True)\n",
         "x_adv = adversary.run_standard_evaluation(torch_testX, torch_testY, bs=batch_size)"
       ],
       "metadata": {
