Change model checkpoint url

--- a/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
+++ b/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
@@ -208,6 +208,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "model_info = {'model':\"https://drive.google.com/uc?export=download&id=1KBVl-URwBiWzCJz-7hiZVe3ROpnyqp66\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1H9XLKzj4uP9jeBi13wPriMgg0Jtz6lPB\"}\n"
+      ],
+      "metadata": {
+        "id": "vQoTB7DqMd0b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Download CIFAR-10 dataset"
@@ -266,7 +277,7 @@
     {
       "cell_type": "code",
       "source": [
-        "url = \"https://drive.google.com/uc?export=download&id=12I5v-qZ3fICEkuJjeSdgH6WWxud6ncF0\"\n",
+        "url = model_info['checkpoint']\n",
         "output = model_folder+'/checkpoint.zip'\n",
         "gdown.download(url, output, quiet=False)\n",
         "shutil.unpack_archive(output, model_folder)\n",
@@ -319,7 +330,7 @@
         "gdown.download(url, output, quiet=False)    \n",
         "\n",
         "# Download file for TF1 model\n",
-        "url = \"https://drive.google.com/uc?export=download&id=11Uj_M8msUIVLUND_ou3xm0-vEHdk0V4f\"\n",
+        "url = model_info['model']\n",
         "output = base_folder+'/model_submit.py'\n",
         "gdown.download(url, output, quiet=False)"
       ],
