Correct AutoAttack file directory

--- a/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
+++ b/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
@@ -81,12 +81,12 @@
         },
         "trusted": true,
         "id": "nU7T3X7yCBOJ",
-        "outputId": "9689e90e-ebe8-4a42-cad2-4ebf605a20fc",
+        "outputId": "82447987-8292-4f94-8abf-e61f24d503f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,8 +95,8 @@
             "/bin/bash: conda: command not found\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/fra31/auto-attack\n",
-            "  Cloning https://github.com/fra31/auto-attack to /tmp/pip-req-build-fvhv942p\n",
-            "  Running command git clone -q https://github.com/fra31/auto-attack /tmp/pip-req-build-fvhv942p\n"
+            "  Cloning https://github.com/fra31/auto-attack to /tmp/pip-req-build-zx_p6ebd\n",
+            "  Running command git clone -q https://github.com/fra31/auto-attack /tmp/pip-req-build-zx_p6ebd\n"
           ]
         }
       ]
@@ -124,12 +124,12 @@
         },
         "trusted": true,
         "id": "Q3E7FncPCBOK",
-        "outputId": "f54c2e35-3d3e-47b8-8c15-e1511a16f7cc",
+        "outputId": "072877cc-3d4b-4634-84b5-153193de3820",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "trusted": true,
         "id": "KT-pMCi0CBOL"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -204,18 +204,25 @@
         "trusted": true,
         "id": "dE3TGcbsCBOM"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model_info = {'model':\"https://drive.google.com/uc?export=download&id=1KBVl-URwBiWzCJz-7hiZVe3ROpnyqp66\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1H9XLKzj4uP9jeBi13wPriMgg0Jtz6lPB\"}\n"
+        "# Residual_size=5, All seperate\n",
+        "#model_info = {'model':\"https://drive.google.com/uc?export=download&id=11Uj_M8msUIVLUND_ou3xm0-vEHdk0V4f\",'checkpoint':\"https://drive.google.com/uc?export=download&id=12I5v-qZ3fICEkuJjeSdgH6WWxud6ncF0\"}\n",
+        "# Residual_size=2, All seperate\n",
+        "model_info = {'model':\"https://drive.google.com/uc?export=download&id=1gMti6aJxej9EwBLh3eoHC1RauMLnpL24\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1nJsOPj71qK8J48Was1wQCaFK0FrWPEoo\"}\n",
+        "# Residual_size=2, Multiple_Q\n",
+        "#model_info = {'model':\"https://drive.google.com/uc?export=download&id=1KBVl-URwBiWzCJz-7hiZVe3ROpnyqp66\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1H9XLKzj4uP9jeBi13wPriMgg0Jtz6lPB\"}\n",
+        "# model_residual_2_multiple_Q_negative_similarity_large_1_5\n",
+        "#model_info = {'model':\"\",'checkpoint':\"\"}"
       ],
       "metadata": {
         "id": "vQoTB7DqMd0b"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -246,12 +253,12 @@
         },
         "trusted": true,
         "id": "dyjtaHzSCBON",
-        "outputId": "a671d883-e870-4331-b594-394c84a14292",
+        "outputId": "3cc07131-1538-4b9b-9c22-0176255b825f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +267,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?export=download&id=1lt7yhOVKEVydOupZ1taA3iNXC5Ety79i\n",
             "To: /content/CIFAR-10/Dataset/dataset_cifar10.zip\n",
-            "100%|██████████| 170M/170M [00:00<00:00, 266MB/s]\n"
+            "100%|██████████| 170M/170M [00:00<00:00, 257MB/s]\n"
           ]
         }
       ]
@@ -293,21 +300,21 @@
         },
         "trusted": true,
         "id": "DG2BqFFNCBON",
-        "outputId": "b2f91867-9829-4b00-fbcb-7ed977bc260d",
+        "outputId": "15e23480-af81-4375-99e8-bcacaf45298d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "Downloading...\n",
-            "From: https://drive.google.com/uc?export=download&id=11pqbqLtmcYgmGN5qRNbdmIFCSItHJjj_\n",
+            "From: https://drive.google.com/uc?export=download&id=1nJsOPj71qK8J48Was1wQCaFK0FrWPEoo\n",
             "To: /content/CIFAR-10/Models/tf1/checkpoint.zip\n",
-            "100%|██████████| 163M/163M [00:00<00:00, 301MB/s]\n"
+            "100%|██████████| 72.6M/72.6M [00:00<00:00, 312MB/s]\n"
           ]
         }
       ]
@@ -344,13 +351,13 @@
         },
         "trusted": true,
         "id": "Plf5DS99CBON",
-        "outputId": "b593d7ab-9d0c-4c68-f3f7-9b374a15eb9b",
+        "outputId": "3cd88438-8e34-44ba-e46d-07e5f25f277c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 171
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,11 +366,11 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?export=download&id=1eOWDdFbPQ8sQJOg7ueuF-bXaL0ev-SK2\n",
             "To: /content/CIFAR-10/cifar10_input.py\n",
-            "100%|██████████| 6.83k/6.83k [00:00<00:00, 2.28MB/s]\n",
+            "100%|██████████| 6.83k/6.83k [00:00<00:00, 9.40MB/s]\n",
             "Downloading...\n",
-            "From: https://drive.google.com/uc?export=download&id=1bDiQHS1l5I-MDs16DcPLbHSDGHZ_jztR\n",
+            "From: https://drive.google.com/uc?export=download&id=1gMti6aJxej9EwBLh3eoHC1RauMLnpL24\n",
             "To: /content/CIFAR-10/model_submit.py\n",
-            "100%|██████████| 11.7k/11.7k [00:00<00:00, 3.00MB/s]\n"
+            "100%|██████████| 11.5k/11.5k [00:00<00:00, 9.34MB/s]\n"
           ]
         },
         {
@@ -377,7 +384,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -409,21 +416,21 @@
         },
         "trusted": true,
         "id": "70GHzWbPCBOO",
-        "outputId": "e6edd9df-7807-42ef-8d2c-e8ce1db9164a",
+        "outputId": "0e52267c-ada0-46e8-aa38-6e1e4dda85cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "Downloading...\n",
-            "From: https://drive.google.com/uc?export=download&id=1lY3MDPYoEa29W1eCEDdUpKn60wpKdinI\n",
+            "From: https://drive.google.com/uc?export=download&id=1S7ivr2avGlK28Aw9fAbavDwaOejX2yt9\n",
             "To: /content/auto-attack/auto-attack-TF1.zip\n",
-            "100%|██████████| 42.4M/42.4M [00:00<00:00, 92.5MB/s]\n"
+            "100%|██████████| 42.4M/42.4M [00:00<00:00, 270MB/s]\n"
           ]
         }
       ]
@@ -466,7 +473,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!cp -r /kaggle/working/auto-attack/auto-attack-TF1_Heterogeneous/autoattack/. /opt/conda/lib/python3.7/site-packages/autoattack/"
+        "!cp -r /content/auto-attack/auto-attack-TF1_Heterogeneous/autoattack/. /usr/local/lib/python3.7/dist-packages/autoattack/"
       ],
       "metadata": {
         "execution": {
@@ -479,7 +486,7 @@
         "trusted": true,
         "id": "VqyyQUdpCBOP"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -507,7 +514,7 @@
         "trusted": true,
         "id": "hSPC7NkNCBOP"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -549,6 +556,11 @@
         "# run plus attack\n",
         "print(\"******** RUN PLUS ATTACK *******\")\n",
         "adversary = AutoAttack(model_back_adapted,model_adapted, norm='Linf', eps=epsilon, version='plus', is_tf_model=True,verbose=True)\n",
+        "x_adv = adversary.run_standard_evaluation(torch_testX, torch_testY, bs=batch_size)\n",
+        "\n",
+        "# run attack - rand\n",
+        "print(\"******** RUN RAND ATTACK *******\")\n",
+        "adversary = AutoAttack(model_back_adapted,model_adapted, norm='Linf', eps=epsilon, version='rand', is_tf_model=True,verbose=True)\n",
         "x_adv = adversary.run_standard_evaluation(torch_testX, torch_testY, bs=batch_size)"
       ],
       "metadata": {
@@ -558,7 +570,7 @@
         },
         "trusted": true,
         "id": "nbUGl0stCBOP",
-        "outputId": "e5823952-3aa4-4ae0-8eb3-816b5da0404a",
+        "outputId": "b581060e-d085-49c5-8a2c-45e3842bb7dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -569,14 +581,20 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WARNING:tensorflow:From ./CIFAR-10/model_submit.py:151: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "WARNING:tensorflow:From ./CIFAR-10/model_submit.py:149: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
             "INFO:tensorflow:Restoring parameters from CIFAR-10/Models/tf1/checkpoint-0\n",
             "******** RUN PLUS ATTACK *******\n",
             "setting parameters for plus version\n",
             "using plus version including apgd-ce, apgd-dlr, fab, square, apgd-t, fab-t\n",
-            "initial accuracy: 72.78%\n"
+            "initial accuracy: 79.30%\n",
+            "apgd-ce - 1/8 - 17 out of 100 successfully perturbed\n",
+            "apgd-ce - 2/8 - 25 out of 100 successfully perturbed\n",
+            "apgd-ce - 3/8 - 19 out of 100 successfully perturbed\n",
+            "apgd-ce - 4/8 - 23 out of 100 successfully perturbed\n",
+            "apgd-ce - 5/8 - 13 out of 100 successfully perturbed\n",
+            "apgd-ce - 6/8 - 29 out of 100 successfully perturbed\n"
           ]
         }
       ]
