Modify model and chenckpoint url

--- a/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
+++ b/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
@@ -86,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "trusted": true,
         "id": "KT-pMCi0CBOL"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,25 +204,18 @@
         "trusted": true,
         "id": "dE3TGcbsCBOM"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Residual_size=5, All seperate\n",
-        "#model_info = {'model':\"https://drive.google.com/uc?export=download&id=11Uj_M8msUIVLUND_ou3xm0-vEHdk0V4f\",'checkpoint':\"https://drive.google.com/uc?export=download&id=12I5v-qZ3fICEkuJjeSdgH6WWxud6ncF0\"}\n",
-        "# Residual_size=2, All seperate\n",
-        "model_info = {'model':\"https://drive.google.com/uc?export=download&id=1gMti6aJxej9EwBLh3eoHC1RauMLnpL24\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1nJsOPj71qK8J48Was1wQCaFK0FrWPEoo\"}\n",
-        "# Residual_size=2, Multiple_Q\n",
-        "#model_info = {'model':\"https://drive.google.com/uc?export=download&id=1KBVl-URwBiWzCJz-7hiZVe3ROpnyqp66\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1H9XLKzj4uP9jeBi13wPriMgg0Jtz6lPB\"}\n",
-        "# model_residual_2_multiple_Q_negative_similarity_large_1_5\n",
-        "#model_info = {'model':\"\",'checkpoint':\"\"}"
+        "model_info = {'model':\"https://drive.google.com/uc?export=download&id=1CXqynYUS3E_BOfQ6LfBT4bxN2kbLBAAY\",'checkpoint':\"https://drive.google.com/uc?export=download&id=16PLzHqErmNdPHexlPfZ8ccxeIaqWOMTt\"}"
       ],
       "metadata": {
         "id": "vQoTB7DqMd0b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +251,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +298,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +350,7 @@
           "height": 171
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +414,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,7 +479,7 @@
         "trusted": true,
         "id": "VqyyQUdpCBOP"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +507,7 @@
         "trusted": true,
         "id": "hSPC7NkNCBOP"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -556,12 +549,7 @@
         "# run plus attack\n",
         "print(\"******** RUN PLUS ATTACK *******\")\n",
         "adversary = AutoAttack(model_back_adapted,model_adapted, norm='Linf', eps=epsilon, version='plus', is_tf_model=True,verbose=True)\n",
-        "x_adv = adversary.run_standard_evaluation(torch_testX, torch_testY, bs=batch_size)\n",
-        "\n",
-        "# run attack - rand\n",
-        "print(\"******** RUN RAND ATTACK *******\")\n",
-        "adversary = AutoAttack(model_back_adapted,model_adapted, norm='Linf', eps=epsilon, version='rand', is_tf_model=True,verbose=True)\n",
-        "x_adv = adversary.run_standard_evaluation(torch_testX, torch_testY, bs=batch_size)"
+        "x_adv = adversary.run_standard_evaluation(torch_testX, torch_testY, bs=batch_size)\n"
       ],
       "metadata": {
         "execution": {
