Run for 1k test data

--- a/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
+++ b/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
@@ -81,12 +81,12 @@
         },
         "trusted": true,
         "id": "nU7T3X7yCBOJ",
-        "outputId": "82447987-8292-4f94-8abf-e61f24d503f4",
+        "outputId": "9c910be6-6bb3-4f86-e91f-a83ff3771071",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,8 +95,15 @@
             "/bin/bash: conda: command not found\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/fra31/auto-attack\n",
-            "  Cloning https://github.com/fra31/auto-attack to /tmp/pip-req-build-zx_p6ebd\n",
-            "  Running command git clone -q https://github.com/fra31/auto-attack /tmp/pip-req-build-zx_p6ebd\n"
+            "  Cloning https://github.com/fra31/auto-attack to /tmp/pip-req-build-6784w4r4\n",
+            "  Running command git clone -q https://github.com/fra31/auto-attack /tmp/pip-req-build-6784w4r4\n",
+            "Building wheels for collected packages: autoattack\n",
+            "  Building wheel for autoattack (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for autoattack: filename=autoattack-0.1-py3-none-any.whl size=34538 sha256=f26b4a321cdcc2b3e46cbe238c02dde849489cd4572bbed0349e513c1584da82\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-dsppxaah/wheels/a2/71/8b/ec4bb51ceac509961546bf5430b7cf433f93bd375ffa75ea45\n",
+            "Successfully built autoattack\n",
+            "Installing collected packages: autoattack\n",
+            "Successfully installed autoattack-0.1\n"
           ]
         }
       ]
@@ -124,12 +131,12 @@
         },
         "trusted": true,
         "id": "Q3E7FncPCBOK",
-        "outputId": "072877cc-3d4b-4634-84b5-153193de3820",
+        "outputId": "ef0691d9-c49a-410e-8535-04ad028ffa53",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +185,7 @@
         "trusted": true,
         "id": "KT-pMCi0CBOL"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -204,7 +211,7 @@
         "trusted": true,
         "id": "dE3TGcbsCBOM"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -215,7 +222,7 @@
       "metadata": {
         "id": "vQoTB7DqMd0b"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -246,12 +253,12 @@
         },
         "trusted": true,
         "id": "dyjtaHzSCBON",
-        "outputId": "3cc07131-1538-4b9b-9c22-0176255b825f",
+        "outputId": "c24354ef-363c-45bd-a351-630a5a12890a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +267,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?export=download&id=1lt7yhOVKEVydOupZ1taA3iNXC5Ety79i\n",
             "To: /content/CIFAR-10/Dataset/dataset_cifar10.zip\n",
-            "100%|██████████| 170M/170M [00:00<00:00, 257MB/s]\n"
+            "100%|██████████| 170M/170M [00:02<00:00, 77.6MB/s]\n"
           ]
         }
       ]
@@ -293,21 +300,21 @@
         },
         "trusted": true,
         "id": "DG2BqFFNCBON",
-        "outputId": "15e23480-af81-4375-99e8-bcacaf45298d",
+        "outputId": "86dd4d39-c152-46ae-e2e3-a8be9236a790",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "Downloading...\n",
-            "From: https://drive.google.com/uc?export=download&id=1nJsOPj71qK8J48Was1wQCaFK0FrWPEoo\n",
+            "From: https://drive.google.com/uc?export=download&id=16PLzHqErmNdPHexlPfZ8ccxeIaqWOMTt\n",
             "To: /content/CIFAR-10/Models/tf1/checkpoint.zip\n",
-            "100%|██████████| 72.6M/72.6M [00:00<00:00, 312MB/s]\n"
+            "100%|██████████| 163M/163M [00:02<00:00, 65.9MB/s]\n"
           ]
         }
       ]
@@ -344,13 +351,13 @@
         },
         "trusted": true,
         "id": "Plf5DS99CBON",
-        "outputId": "3cd88438-8e34-44ba-e46d-07e5f25f277c",
+        "outputId": "522e183d-c1ca-4150-a3b8-b4de8979560d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 171
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,11 +366,11 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?export=download&id=1eOWDdFbPQ8sQJOg7ueuF-bXaL0ev-SK2\n",
             "To: /content/CIFAR-10/cifar10_input.py\n",
-            "100%|██████████| 6.83k/6.83k [00:00<00:00, 9.40MB/s]\n",
+            "100%|██████████| 6.83k/6.83k [00:00<00:00, 1.18MB/s]\n",
             "Downloading...\n",
-            "From: https://drive.google.com/uc?export=download&id=1gMti6aJxej9EwBLh3eoHC1RauMLnpL24\n",
+            "From: https://drive.google.com/uc?export=download&id=1CXqynYUS3E_BOfQ6LfBT4bxN2kbLBAAY\n",
             "To: /content/CIFAR-10/model_submit.py\n",
-            "100%|██████████| 11.5k/11.5k [00:00<00:00, 9.34MB/s]\n"
+            "100%|██████████| 12.0k/12.0k [00:00<00:00, 21.9MB/s]\n"
           ]
         },
         {
@@ -409,12 +416,12 @@
         },
         "trusted": true,
         "id": "70GHzWbPCBOO",
-        "outputId": "0e52267c-ada0-46e8-aa38-6e1e4dda85cc",
+        "outputId": "1bed4ccb-dc24-4146-a912-d8e9d5535bfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +430,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?export=download&id=1S7ivr2avGlK28Aw9fAbavDwaOejX2yt9\n",
             "To: /content/auto-attack/auto-attack-TF1.zip\n",
-            "100%|██████████| 42.4M/42.4M [00:00<00:00, 270MB/s]\n"
+            "100%|██████████| 42.4M/42.4M [00:01<00:00, 26.4MB/s]\n"
           ]
         }
       ]
@@ -479,7 +486,7 @@
         "trusted": true,
         "id": "VqyyQUdpCBOP"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -507,7 +514,7 @@
         "trusted": true,
         "id": "hSPC7NkNCBOP"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -558,7 +565,7 @@
         },
         "trusted": true,
         "id": "nbUGl0stCBOP",
-        "outputId": "b581060e-d085-49c5-8a2c-45e3842bb7dc",
+        "outputId": "3afed73c-fb94-433f-882b-c1a7ab11f812",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -569,20 +576,56 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WARNING:tensorflow:From ./CIFAR-10/model_submit.py:149: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "WARNING:tensorflow:From ./CIFAR-10/model_submit.py:157: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
             "INFO:tensorflow:Restoring parameters from CIFAR-10/Models/tf1/checkpoint-0\n",
             "******** RUN PLUS ATTACK *******\n",
             "setting parameters for plus version\n",
             "using plus version including apgd-ce, apgd-dlr, fab, square, apgd-t, fab-t\n",
-            "initial accuracy: 79.30%\n",
-            "apgd-ce - 1/8 - 17 out of 100 successfully perturbed\n",
-            "apgd-ce - 2/8 - 25 out of 100 successfully perturbed\n",
-            "apgd-ce - 3/8 - 19 out of 100 successfully perturbed\n",
-            "apgd-ce - 4/8 - 23 out of 100 successfully perturbed\n",
-            "apgd-ce - 5/8 - 13 out of 100 successfully perturbed\n",
-            "apgd-ce - 6/8 - 29 out of 100 successfully perturbed\n"
+            "initial accuracy: 77.70%\n",
+            "apgd-ce - 1/8 - 15 out of 100 successfully perturbed\n",
+            "apgd-ce - 2/8 - 10 out of 100 successfully perturbed\n",
+            "apgd-ce - 3/8 - 16 out of 100 successfully perturbed\n",
+            "apgd-ce - 4/8 - 15 out of 100 successfully perturbed\n",
+            "apgd-ce - 5/8 - 6 out of 100 successfully perturbed\n",
+            "apgd-ce - 6/8 - 15 out of 100 successfully perturbed\n",
+            "apgd-ce - 7/8 - 11 out of 100 successfully perturbed\n",
+            "apgd-ce - 8/8 - 8 out of 77 successfully perturbed\n",
+            "robust accuracy after APGD-CE: 68.10% (total time 1637.1 s)\n",
+            "apgd-dlr - 1/7 - 11 out of 100 successfully perturbed\n",
+            "apgd-dlr - 2/7 - 6 out of 100 successfully perturbed\n",
+            "apgd-dlr - 3/7 - 9 out of 100 successfully perturbed\n",
+            "apgd-dlr - 4/7 - 4 out of 100 successfully perturbed\n",
+            "apgd-dlr - 5/7 - 8 out of 100 successfully perturbed\n",
+            "apgd-dlr - 6/7 - 8 out of 100 successfully perturbed\n",
+            "apgd-dlr - 7/7 - 8 out of 81 successfully perturbed\n",
+            "robust accuracy after APGD-DLR: 62.70% (total time 3055.5 s)\n",
+            "fab - 1/7 - 0 out of 100 successfully perturbed\n",
+            "fab - 2/7 - 3 out of 100 successfully perturbed\n",
+            "fab - 3/7 - 2 out of 100 successfully perturbed\n",
+            "fab - 4/7 - 4 out of 100 successfully perturbed\n",
+            "fab - 5/7 - 5 out of 100 successfully perturbed\n",
+            "fab - 6/7 - 1 out of 100 successfully perturbed\n",
+            "fab - 7/7 - 0 out of 27 successfully perturbed\n",
+            "robust accuracy after FAB: 61.20% (total time 7856.3 s)\n",
+            "square - 1/7 - 7 out of 100 successfully perturbed\n",
+            "square - 2/7 - 5 out of 100 successfully perturbed\n",
+            "square - 3/7 - 10 out of 100 successfully perturbed\n",
+            "square - 4/7 - 9 out of 100 successfully perturbed\n",
+            "square - 5/7 - 6 out of 100 successfully perturbed\n",
+            "square - 6/7 - 2 out of 100 successfully perturbed\n",
+            "square - 7/7 - 2 out of 12 successfully perturbed\n",
+            "robust accuracy after SQUARE: 57.10% (total time 9822.8 s)\n",
+            "apgd-t - 1/6 - 8 out of 100 successfully perturbed\n",
+            "apgd-t - 2/6 - 4 out of 100 successfully perturbed\n",
+            "apgd-t - 3/6 - 7 out of 100 successfully perturbed\n",
+            "apgd-t - 4/6 - 3 out of 100 successfully perturbed\n",
+            "apgd-t - 5/6 - 6 out of 100 successfully perturbed\n",
+            "apgd-t - 6/6 - 8 out of 71 successfully perturbed\n",
+            "robust accuracy after APGD-T: 53.50% (total time 12169.6 s)\n",
+            "fab-t - 1/6 - 2 out of 100 successfully perturbed\n",
+            "fab-t - 2/6 - 2 out of 100 successfully perturbed\n"
           ]
         }
       ]
