Select model_1 for running model

--- a/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
+++ b/CIFAR-10/robust-model-zoo-cifar10-tf1.ipynb
@@ -218,10 +218,10 @@
       "cell_type": "code",
       "source": [
         "# model_1 in https://github.com/metinaktas/Robust-Model-Zoo/blob/main/CIFAR-10/Models/tf1/model_1/model.py\n",
-        "#model_info = {'model':\"https://drive.google.com/uc?export=download&id=1CXqynYUS3E_BOfQ6LfBT4bxN2kbLBAAY\",'checkpoint':\"https://drive.google.com/uc?export=download&id=16PLzHqErmNdPHexlPfZ8ccxeIaqWOMTt\"}\n",
+        "model_info = {'model':\"https://drive.google.com/uc?export=download&id=1CXqynYUS3E_BOfQ6LfBT4bxN2kbLBAAY\",'checkpoint':\"https://drive.google.com/uc?export=download&id=16PLzHqErmNdPHexlPfZ8ccxeIaqWOMTt\"}\n",
         "\n",
         "# model_2 in https://github.com/metinaktas/Robust-Model-Zoo/blob/main/CIFAR-10/Models/tf1/model_2/model.py\n",
-        "model_info = {'model':\"https://drive.google.com/uc?export=download&id=1cXSbTcJ5_Bm3yfYlTrhfToRZEjQIkJ8S\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1s76yDCBK86KN_cxjJM87i4qn897arAY_\"}"
+        "#model_info = {'model':\"https://drive.google.com/uc?export=download&id=1cXSbTcJ5_Bm3yfYlTrhfToRZEjQIkJ8S\",'checkpoint':\"https://drive.google.com/uc?export=download&id=1s76yDCBK86KN_cxjJM87i4qn897arAY_\"}"
       ],
       "metadata": {
         "id": "vQoTB7DqMd0b"
